Correct page: remove horizontal scroll bar from main page.

--- a/PrettyCats/PrettyCats/Content/Site.css
+++ b/PrettyCats/PrettyCats/Content/Site.css
@@ -40,8 +40,7 @@
 }
 
 footer {
-    margin: 50px 0;
-    max-height: 70px;
+    margin: 20px 0;
 }
 
 .hidden{
